--- a/css/common.css
+++ b/css/common.css
@@ -14,12 +14,14 @@
 }
 
 .header {
+  position: fixed;
   width: 100%;
   height: 80px;
   line-height: 80px;
   background: var(--text-color);
   overflow: hidden;
   box-sizing: border-box;
+  z-index: 100;
 }
 
 .nav {
@@ -355,12 +357,26 @@
   opacity: 0;
   animation: text_show 2s 0.8s forwards;
 }
+.main .que_btn:hover i {
+  animation: arrow_move 1s infinite ease-in-out;
+}
 .main .que_btn i {
   font-size: 2rem;
   font-weight: 600;
   padding-left: 0.5rem;
 }
 
+@keyframes arrow_move {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(3px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
 .visual_wrap {
   height: 100vh;
   background: linear-gradient(to right, #38404B, #2A2E3A);
@@ -637,8 +653,36 @@
   }
 }
 @media screen and (max-width: 580px) {
+  .header {
+    height: 60px;
+    line-height: 60px;
+    transition: all 0.6s ease-in-out;
+  }
+  .header.open {
+    height: 100vh;
+  }
+  .header.open .nav ul {
+    display: block;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+  }
+
+  .nav .logo a {
+    height: 60px;
+  }
   .nav ul {
     display: none;
+  }
+  .nav ul li {
+    margin-bottom: 2rem;
+  }
+  .nav ul li a {
+    font-size: 2.4rem;
   }
 
   .ham_btn {
