--- a/scss/common.scss
+++ b/scss/common.scss
@@ -18,12 +18,14 @@
 
 // Header
 .header {
+  position: fixed;
   width: 100%;
   height: 80px;
   line-height: 80px;
   background: var(--text-color);
   overflow: hidden;
   box-sizing: border-box;
+  z-index: 100;
 }
 .nav {
   display: flex;
@@ -377,11 +379,28 @@
     color: #155FDE;
     opacity: 0;
     animation: text_show 2s .8s forwards;
+    &:hover {
+      i {
+        animation: arrow_move 1s infinite ease-in-out;
+      }
+    }
     i {
       font-size: 2rem;
       font-weight: 600;
       padding-left: .5rem;
     }
+  }
+}
+
+@keyframes arrow_move {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(3px);
+  }
+  100% {
+    transform: translateX(0px);
   }
 }
 
@@ -707,9 +726,40 @@
 }
 
 @media screen and (max-width: 580px) {
-  .nav {
+  .header {
+    height: 60px;
+    line-height: 60px;
+    transition: all .6s ease-in-out;
+    &.open {
+      height: 100vh;
+      .nav {
+        ul {
+          display: block;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, 50%);
+        }
+      }
+    }
+  }
+  .nav { 
+    .logo {
+      a {
+        height: 60px;
+      }
+    }
     ul {
       display: none;
+      li {
+        margin-bottom: 2rem;
+        a {
+          font-size: 2.4rem;
+        }
+      }
     }
   }
   .ham_btn {
