--- a/css/common.css
+++ b/css/common.css
@@ -326,7 +326,7 @@
 }
 .main .main_wrap {
   height: 100%;
-  background: url("/images/notebook_img.png") no-repeat;
+  background: url("../images/notebook_img.png") no-repeat;
   background-size: 70%;
   background-position: bottom -700px center;
   box-sizing: border-box;
@@ -507,21 +507,21 @@
 .link_wrap ul li .link_box {
   width: 100%;
   height: 100%;
-  background: url("/images/main_img1.png") no-repeat;
+  background: url("../images/main_img1.png") no-repeat;
   background-size: cover;
   background-position: top 200px center;
   transition: background-position 0.5s ease-in-out;
 }
 .link_wrap ul li .link_box.item2 {
-  background: url("/images/main_img2.png") no-repeat;
+  background: url("../images/main_img2.png") no-repeat;
   background-position: top -60px left 300px;
 }
 .link_wrap ul li .link_box.item3 {
-  background: url("/images/main_img3.png") no-repeat;
+  background: url("../images/main_img3.png") no-repeat;
   background-position: top 60px left -60px;
 }
 .link_wrap ul li .link_box.item4 {
-  background: url("/images/main_img4.png") no-repeat;
+  background: url("../images/main_img4.png") no-repeat;
   background-position: top 60px right 20px;
 }
 .link_wrap ul li .link_box h5 {
