--- a/css/business.css
+++ b/css/business.css
@@ -62,6 +62,7 @@
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 2;
+  text-align: right;
   padding-bottom: 5rem;
   box-sizing: border-box;
 }
@@ -85,6 +86,9 @@
   box-sizing: border-box;
 }
 .business_wrap .item_box.left {
+  text-align: left;
+}
+.business_wrap .item_box.left .text_wrap p {
   text-align: left;
 }
 .business_wrap .item_box.left ul {
