--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 .container {
   position: relative;
   width: 100%;
@@ -11,6 +15,25 @@
   padding: 0 2rem;
   margin: auto;
   box-sizing: border-box;
+}
+
+#skip_nav {
+  position: relative;
+  z-index: 9999;
+}
+#skip_nav a {
+  position: absolute;
+  top: -200px;
+  left: 0;
+  width: 200px;
+  line-height: 40px;
+  color: #fff;
+  border: none;
+  background-color: var(--blur-color);
+}
+#skip_nav a:focus, #skip_nav a.active {
+  top: 0;
+  outline: none;
 }
 
 .header {
@@ -268,24 +291,32 @@
 .main_visual {
   width: 100%;
   height: 100vh;
-  background: url("../images/info_main.png") no-repeat;
+  background: url("/images/info_main.png") no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  background-attachment: fixed;
 }
 .main_visual.business {
-  background: url("../images/business_main.png") no-repeat;
+  background: url("/images/business_main.png") no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  background-attachment: fixed;
 }
 .main_visual.contact {
-  background: url("../images/contact_main.png") no-repeat;
+  background: url("/images/contact_main.png") no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  background-attachment: fixed;
 }
 .main_visual.notice {
-  background: url("../images/notice_main.png") no-repeat;
+  background: url("/images/notice_main2.png") no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  background-attachment: fixed;
 }
 .main_visual .text_wrap {
   text-align: right;
-  padding-top: 12rem;
+  padding-top: 22rem;
   color: #fff;
   box-sizing: border-box;
 }
@@ -310,7 +341,7 @@
 
 .main {
   position: relative;
-  height: 80vh;
+  height: 90vh;
   padding-bottom: 20px;
   box-sizing: border-box;
 }
@@ -326,9 +357,12 @@
 }
 .main .main_wrap {
   height: 100%;
-  background: url("../images/notebook_img.png") no-repeat;
+  background: url("/images/notebook_img.png") no-repeat;
   background-size: 70%;
+  -webkit-background-size: 70%;
   background-position: bottom -700px center;
+  background-position-x: 50%;
+  background-position-y: bottom -700px;
   box-sizing: border-box;
   overflow: hidden;
   animation: notebook 1.4s ease-in-out forwards;
@@ -337,7 +371,7 @@
   font-size: 4.8rem;
   font-weight: 600;
   letter-spacing: 0.6rem;
-  padding: 10rem 0 3rem;
+  padding: 18rem 0 3rem;
   box-sizing: border-box;
   opacity: 0;
   animation: text_show 2s forwards;
@@ -366,17 +400,6 @@
   padding-left: 0.5rem;
 }
 
-@keyframes arrow_move {
-  0% {
-    transform: translateX(0px);
-  }
-  50% {
-    transform: translateX(3px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
-}
 .visual_wrap {
   height: 100vh;
   background: linear-gradient(to right, #38404B, #2A2E3A);
@@ -466,16 +489,16 @@
   overflow: hidden;
   transform: translateY(150px);
   opacity: 0;
-  transition: background-color 0.3s ease-in-out, transform 0.8s ease-in-out, opacity 0.8s ease-in-out;
+  transition: background-color 0.3s ease-in-out, transform 1s ease-in-out, opacity 1s ease-in-out;
 }
 .link_wrap ul li:nth-child(2) {
-  transition: background-color 0.3s ease-in-out, transform 1.2s ease-in-out, opacity 1.2s ease-in-out;
+  transition: background-color 0.3s ease-in-out, transform 1s 0.2s ease-in-out, opacity 1s 0.2s ease-in-out;
 }
 .link_wrap ul li:nth-child(3) {
-  transition: background-color 0.3s ease-in-out, transform 1.6s ease-in-out, opacity 1.6s ease-in-out;
+  transition: background-color 0.3s ease-in-out, transform 1s 0.4s ease-in-out, opacity 1s 0.4s ease-in-out;
 }
 .link_wrap ul li:nth-child(4) {
-  transition: background-color 0.3s ease-in-out, transform 2s ease-in-out, opacity 2s ease-in-out;
+  transition: background-color 0.3s ease-in-out, transform 1s 0.6s ease-in-out, opacity 1s 0.6s ease-in-out;
 }
 .link_wrap ul li:hover {
   background: #E4E4E6;
@@ -490,7 +513,7 @@
   background-position: top 40px left -30px;
 }
 .link_wrap ul li:hover .link_box.item4 {
-  background-position: top 40px right 40px;
+  background-position: top 10px right 0px;
 }
 .link_wrap ul li a {
   width: 100%;
@@ -507,22 +530,31 @@
 .link_wrap ul li .link_box {
   width: 100%;
   height: 100%;
-  background: url("../images/main_img1.png") no-repeat;
+  background: url("/images/main_img1.png") no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
   background-position: top 200px center;
+  background-position-x: 50%;
+  background-position-y: top 200px;
   transition: background-position 0.5s ease-in-out;
 }
 .link_wrap ul li .link_box.item2 {
-  background: url("../images/main_img2.png") no-repeat;
+  background: url("/images/main_img2.png") no-repeat;
   background-position: top -60px left 300px;
+  background-position-x: left 300px;
+  background-position-y: top -60px;
 }
 .link_wrap ul li .link_box.item3 {
-  background: url("../images/main_img3.png") no-repeat;
+  background: url("/images/main_img3.png") no-repeat;
   background-position: top 60px left -60px;
+  background-position-x: left -60px;
+  background-position-y: top 60px;
 }
 .link_wrap ul li .link_box.item4 {
-  background: url("../images/main_img4.png") no-repeat;
-  background-position: top 60px right 20px;
+  background: url("/images/main_img5.png") no-repeat;
+  background-position: top 30px right 0px;
+  background-position-x: right 0px;
+  background-position-y: top 30px;
 }
 .link_wrap ul li .link_box h5 {
   font-size: 2.4rem;
@@ -573,28 +605,51 @@
   background: var(--gray);
 }
 
+@keyframes arrow_move {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(3px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
 @keyframes notebook {
   0% {
     background-position: bottom -700px center;
+    background-position-x: 50%;
+    background-position-y: bottom -700px;
   }
   100% {
     background-position: bottom -300px center;
+    background-position-x: 50%;
+    background-position-y: bottom -300px;
   }
 }
 @keyframes notebook_1 {
   0% {
     background-position: bottom -700px center;
+    background-position-x: 50%;
+    background-position-y: bottom -700px;
   }
   100% {
     background-position: bottom -200px center;
+    background-position-x: 50%;
+    background-position-y: bottom -200px;
   }
 }
 @keyframes notebook_2 {
   0% {
     background-position: bottom -700px center;
+    background-position-x: 50%;
+    background-position-y: bottom -700px;
   }
   100% {
     background-position: bottom -100px center;
+    background-position-x: 50%;
+    background-position-y: bottom -100px;
   }
 }
 @keyframes text_show {
@@ -608,7 +663,10 @@
 @media screen and (max-width: 1280px) {
   .main .main_wrap {
     background-size: contain;
+    -webkit-background-size: contain;
     background-position: top center;
+    background-position-x: 50%;
+    background-position-y: top 0%;
   }
 
   .link_wrap ul {
@@ -633,7 +691,7 @@
     background-position: top -100px left 170px;
   }
   .link_wrap ul li .link_box.item4 {
-    background-position: top 160px right 20px;
+    background-position: top 160px right 0px;
   }
 
   #map {
@@ -715,6 +773,7 @@
   .link_wrap ul li .link_box {
     background-position: top 280px center;
     background-size: contain;
+    -webkit-background-size: contain;
   }
   .link_wrap ul li .link_box.item2 {
     background-position: top -100px left;
@@ -757,6 +816,7 @@
   .link_wrap ul li .link_box {
     background-position: top 300px center;
     background-size: contain;
+    -webkit-background-size: contain;
   }
   .link_wrap ul li .link_box h5 {
     padding: 7rem 2rem 5rem 0;
