--- a/scss/business.scss
+++ b/scss/business.scss
@@ -69,6 +69,7 @@
         font-size: 1.4rem;
         font-weight: 400;
         line-height: 2;
+        text-align: right;
         padding-bottom: 5rem;
         box-sizing: border-box;
       }
@@ -94,6 +95,9 @@
     }
     &.left { 
       text-align: left;
+      .text_wrap {
+        p { text-align: left; }
+      }
       ul { justify-content: flex-start; }
     }
   }
