--- a/css/common.css
+++ b/css/common.css
@@ -291,25 +291,25 @@ html, body {
 .main_visual {
   width: 100%;
   height: 100vh;
-  background: url("/images/info_main.png") no-repeat;
+  background: url("../images/info_main.png") no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   background-attachment: fixed;
 }
 .main_visual.business {
-  background: url("/images/business_main.png") no-repeat;
+  background: url("../images/business_main.png") no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   background-attachment: fixed;
 }
 .main_visual.contact {
-  background: url("/images/contact_main.png") no-repeat;
+  background: url("../images/contact_main.png") no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   background-attachment: fixed;
 }
 .main_visual.notice {
-  background: url("/images/notice_main2.png") no-repeat;
+  background: url("../images/notice_main2.png") no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   background-attachment: fixed;
@@ -357,7 +357,7 @@ html, body {
 }
 .main .main_wrap {
   height: 100%;
-  background: url("/images/notebook_img.png") no-repeat;
+  background: url("../images/notebook_img.png") no-repeat;
   background-size: 70%;
   -webkit-background-size: 70%;
   background-position: bottom -700px center;
@@ -530,7 +530,7 @@ html, body {
 .link_wrap ul li .link_box {
   width: 100%;
   height: 100%;
-  background: url("/images/main_img1.png") no-repeat;
+  background: url("../images/main_img1.png") no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   background-position: top 200px center;
@@ -539,19 +539,19 @@ html, body {
   transition: background-position 0.5s ease-in-out;
 }
 .link_wrap ul li .link_box.item2 {
-  background: url("/images/main_img2.png") no-repeat;
+  background: url("../images/main_img2.png") no-repeat;
   background-position: top -60px left 300px;
   background-position-x: left 300px;
   background-position-y: top -60px;
 }
 .link_wrap ul li .link_box.item3 {
-  background: url("/images/main_img3.png") no-repeat;
+  background: url("../images/main_img3.png") no-repeat;
   background-position: top 60px left -60px;
   background-position-x: left -60px;
   background-position-y: top 60px;
 }
 .link_wrap ul li .link_box.item4 {
-  background: url("/images/main_img5.png") no-repeat;
+  background: url("../images/main_img5.png") no-repeat;
   background-position: top 30px right 0px;
   background-position-x: right 0px;
   background-position-y: top 30px;
