--- a/css/common.css
+++ b/css/common.css
@@ -366,6 +366,7 @@ html, body {
   box-sizing: border-box;
   overflow: hidden;
   animation: notebook 1.4s ease-in-out forwards;
+  -webkit-animation: notebook 1.4s ease-in-out forwards;
 }
 .main .title {
   font-size: 4.8rem;
